[gd_scene load_steps=9 format=3 uid="uid://ccn3016x6cl35"]

[ext_resource type="Script" path="res://game.gd" id="1_l1rnh"]
[ext_resource type="PackedScene" uid="uid://dr62riwcjhn2l" path="res://player.tscn" id="1_w3s25"]
[ext_resource type="PackedScene" uid="uid://cq4vln0memoq6" path="res://pine_tree.tscn" id="2_fqngh"]
[ext_resource type="PackedScene" uid="uid://b32glqlj34qgx" path="res://mainmenu.tscn" id="4_q5fxp"]

[sub_resource type="Curve2D" id="Curve2D_2gb6e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -76, -106, 0, 0, 0, 0, 2093, -108, 0, 0, 0, 0, 2093, 1184, 0, 0, 0, 0, -81, 1187, 0, 0, 0, 0, -75, -106)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_usuwi"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1556, -753, 0, 0, 0, 0, -1536, -776, 0, 0, 0, 0, -1311, -823, 0, 0, 0, 0, -1153, -877, 0, 0, 0, 0, -968, -968, 0, 0, 0, 0, -766, -978, 0, 0, 0, 0, -443, -884, 0, 0, 0, 0, -383, -887, 0, 0, 0, 0, -366, -998, 0, 0, 0, 0, -201, -1129, 0, 0, 0, 0, 243, -1140, 0, 0, 0, 0, 610, -1042, 0, 0, 0, 0, 828, -823, 0, 0, 0, 0, 388, -736, 0, 0, 0, 0, -329, -753, 0, 0, 0, 0, -598, -823, 0, 0, 0, 0, -790, -897, 0, 0, 0, 0, -1281, -918, 0, 0, 0, 0, -1661, -928, 0, 0, 0, 0, -1755, -770, 0, 0, 0, 0, -1180, -645, 0, 0, 0, 0, -557, -773, 0, 0, 0, 0, -245, -968, 0, 0, 0, 0, -134, -1008, 0, 0, 0, 0, 273, -1002, 0, 0, 0, 0, 647, -948, 0, 0, 0, 0, 667, -665, 0, 0, 0, 0, 304, -739, 0, 0, 0, 0, 458, -1069, 0, 0, 0, 0, 970, -1082, 0, 0, 0, 0, 1696, -931, 0, 0, 0, 0, 2022, -746, 0, 0, 0, 0, 1639, -497, 0, 0, 0, 0, 1131, -706, 0, 0, 0, 0, 1404, -1059, 0, 0, 0, 0, 1932, -877, 0, 0, 0, 0, 1531, -494, 0, 0, 0, 0, 1047, -632, 0, 0, 0, 0, 1525, -1032, 0, 0, 0, 0, 1767, -803, 0, 0, 0, 0, 1131, -581, 0, 0, 0, 0, 650, -870, 0, 0, 0, 0, 1037, -1119, 0, 0, 0, 0, 1811, -1069, 0, 0, 0, 0, 2063, -537, 0, 0, 0, 0, 1410, -181, 0, 0, 0, 0, 1155, -544, 0, 0, 0, 0, 1804, -615, 0, 0, 0, 0, 1979, -110, 0, 0, 0, 0, 1276, -167, 0, 0, 0, 0, 1821, -628, 0, 0, 0, 0, 2194, -63, 0, 0, 0, 0, 1350, 414, 0, 0, 0, 0, 1262, -83, 0, 0, 0, 0, 2372, 71, 0, 0, 0, 0, 2130, 650, 0, 0, 0, 0, 1562, 169, 0, 0, 0, 0, 1726, -238, 0, 0, 0, 0, 2251, 485, 0, 0, 0, 0, 1636, 852, 0, 0, 0, 0, 1336, 122, 0, 0, 0, 0, 1858, 112, 0, 0, 0, 0, 2103, 1010, 0, 0, 0, 0, 1336, 959, 0, 0, 0, 0, 1696, 337, 0, 0, 0, 0, 2140, 848, 0, 0, 0, 0, 1299, 1323, 0, 0, 0, 0, 1050, 899, 0, 0, 0, 0, 1999, 1010, 0, 0, 0, 0, 1498, 1437, 0, 0, 0, 0, 1454, 939, 0, 0, 0, 0, 1195, 1158, 0, 0, 0, 0, 556, 1030, 0, 0, 0, 0, 1007, 848, 0, 0, 0, 0, 990, 1138, 0, 0, 0, 0, 95, 1016, 0, 0, 0, 0, 495, 805, 0, 0, 0, 0, 738, 1090, 0, 0, 0, 0, -342, 1154, 0, 0, 0, 0, -346, 710, 0, 0, 0, 0, 405, 932, 0, 0, 0, 0, -251, 1225, 0, 0, 0, 0, -1059, 1057, 0, 0, 0, 0, -339, 784, 0, 0, 0, 0, 159, 1020, 0, 0, 0, 0, -1173, 1225, 0, 0, 0, 0, -1654, 932, 0, 0, 0, 0, -766, 818, 0, 0, 0, 0, -867, 1151, 0, 0, 0, 0, -1997, 1060, 0, 0, 0, 0, -2098, 542, 0, 0, 0, 0, -1355, 519, 0, 0, 0, 0, -1667, 869, 0, 0, 0, 0, -2290, 502, 0, 0, 0, 0, -1600, 209, 0, 0, 0, 0, -1371, 647, 0, 0, 0, 0, -1647, 357, 0, 0, 0, 0, -1341, -443, 0, 0, 0, 0, -1826, -151, 0, 0, 0, 0, -1987, -585, 0, 0, 0, 0, -1281, -504, 0, 0, 0, 0, -1624, -33, 0, 0, 0, 0, -2246, -470, 0, 0, 0, 0, -1795, -803, 0, 0, 0, 0, -1361, -30, 0, 0, 0, 0, -1947, 206, 0, 0, 0, 0, -1812, -561, 0, 0, 0, 0, -1160, -228, 0, 0, 0, 0, -1805, 347, 0, 0, 0, 0, -2115, -272, 0, 0, 0, 0, -1580, -537, 0, 0, 0, 0, -1513, 213, 0, 0, 0, 0, -2138, 142, 0, 0, 0, 0, -2206, -746, 0, 0, 0, 0, -1644, -1018, 0, 0, 0, 0, -1197, -810, 0, 0, 0, 0, -1694, -827, 0, 0, 0, 0, -1822, -1140, 0, 0, 0, 0, -1462, -1012, 0, 0, 0, 0, -1704, -749, 0, 0, 0, 0, -964, -867, 0, 0, 0, 0, -1180, -914, 0, 0, 0, 0, -473, -1086, 0, 0, 0, 0, -322, -827, 0, 0, 0, 0, -742, -981, 0, 0, 0, 0, -305, -1079, 0, 0, 0, 0, -33, -847, 0, 0, 0, 0, -450, -881, 0, 0, 0, 0, 546, -1089, 0, 0, 0, 0, 1027, -877, 0, 0, 0, 0, 384, -887, 0, 0, 0, 0, 1074, -1002, 0, 0, 0, 0, 1575, -786, 0, 0, 0, 0, 1134, -827, 0, 0, 0, 0, 2049, -877, 0, 0, 0, 0, 2123, -420, 0, 0, 0, 0, 1565, -561, 0, 0, 0, 0, 1959, -736, 0, 0, 0, 0, 2406, -40, 0, 0, 0, 0, 1824, 162, 0, 0, 0, 0, 2009, 55, 0, 0, 0, 0, 2352, 815, 0, 0, 0, 0, 1683, 969, 0, 0, 0, 0, 2009, 667, 0, 0, 0, 0, 2147, 946, 0, 0, 0, 0, 1666, 1077, 0, 0, 0, 0, 1679, 879, 0, 0, 0, 0, 1848, 1154, 0, 0, 0, 0, 1185, 1259, 0, 0, 0, 0, 775, 1161)
}
point_count = 150

[sub_resource type="LabelSettings" id="LabelSettings_3vp3d"]
font_size = 65

[sub_resource type="NavigationPolygon" id="NavigationPolygon_kpje7"]
outlines = Array[PackedVector2Array]([PackedVector2Array(-128, -128, 2112, -128, 2112, 1217, -128, 1216)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_l1rnh")
metadata/_edit_vertical_guides_ = [-98.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.380392, 0.737255, 0.360784, 1)

[node name="Player" parent="." instance=ExtResource("1_w3s25")]
unique_name_in_owner = true
position = Vector2(975, 552)
motion_mode = 1

[node name="Path2D" type="Path2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(-975, -552)
curve = SubResource("Curve2D_2gb6e")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-76, -106)
rotation = -0.000922084

[node name="Path2D2" type="Path2D" parent="Player"]
position = Vector2(-157.209, -111.193)
scale = Vector2(1.68463, 1.66123)
curve = SubResource("Curve2D_usuwi")

[node name="PathFollow2D2" type="PathFollow2D" parent="Player/Path2D2"]
unique_name_in_owner = true
position = Vector2(-1556, -753)
rotation = -0.855053

[node name="PineTree" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(468, 862)

[node name="PineTree2" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(327, 235)

[node name="PineTree3" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1342, 944)

[node name="PineTree4" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1205, 425)

[node name="PineTree5" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1759, 577)

[node name="PineTree6" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1578, 153)

[node name="PineTree7" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(760, 140)

[node name="PineTree8" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(503, 584)

[node name="PineTree9" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(920, 933)

[node name="PineTree10" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(168, 684)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -45.0
offset_right = 140.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died"
label_settings = SubResource("LabelSettings_3vp3d")

[node name="UI" parent="." instance=ExtResource("4_q5fxp")]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_kpje7")
navigation_layers = 15

[connection signal="game_has_started" from="." to="UI" method="_on_game_game_has_started"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
