[gd_scene load_steps=7 format=3 uid="uid://ccn3016x6cl35"]

[ext_resource type="Script" path="res://game.gd" id="1_l1rnh"]
[ext_resource type="PackedScene" uid="uid://dr62riwcjhn2l" path="res://player.tscn" id="1_w3s25"]
[ext_resource type="PackedScene" uid="uid://cq4vln0memoq6" path="res://pine_tree.tscn" id="2_fqngh"]
[ext_resource type="PackedScene" uid="uid://b32glqlj34qgx" path="res://mainmenu.tscn" id="4_q5fxp"]

[sub_resource type="Curve2D" id="Curve2D_2gb6e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -76, -106, 0, 0, 0, 0, 2093, -108, 0, 0, 0, 0, 2093, 1184, 0, 0, 0, 0, -81, 1187, 0, 0, 0, 0, -75, -106)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_3vp3d"]
font_size = 65

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_l1rnh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("1_w3s25")]
unique_name_in_owner = true
position = Vector2(975, 552)
motion_mode = 1

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-975, -552)
curve = SubResource("Curve2D_2gb6e")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-76, -106)
rotation = -0.000922084

[node name="PineTree" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(468, 862)

[node name="PineTree2" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(327, 235)

[node name="PineTree3" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1342, 944)

[node name="PineTree4" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1205, 425)

[node name="PineTree5" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1759, 577)

[node name="PineTree6" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(1578, 153)

[node name="PineTree7" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(760, 140)

[node name="PineTree8" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(503, 584)

[node name="PineTree9" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(920, 933)

[node name="PineTree10" parent="." instance=ExtResource("2_fqngh")]
position = Vector2(168, 684)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -45.0
offset_right = 140.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died"
label_settings = SubResource("LabelSettings_3vp3d")

[node name="TreeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
autostart = true

[node name="UI" parent="." instance=ExtResource("4_q5fxp")]

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TreeTimer" to="." method="_on_tree_timer_timeout"]
